<resources>
    <string name="app_name">ExHentai</string>
    <string name="action_settings">设置</string>
    <string name="refresh">刷新</string>
    <string name="fav">收藏夹 - 全彩</string>
    <string name="ipb_member_id">ipb_member_id</string>
    <string name="ipb_pass_hash">ipb_pass_hash</string>
    <string name="ipb_session_id">ipb_session_id</string>
    <string name="set_cookie">手动设置Cookie</string>
    <string name="load_clipboard">加载剪贴板</string>
    <string name="reset_download_manager">重置下载管理器</string>
    <string name="download">下载</string>
    <string name="needLogin">未发现Cookie，需要登录，请登录后重新启动</string>
    <string name="add_succeed">添加成功</string>
    <string name="add_fail">添加失败</string>
    <string name="skip_downloading">跳过正在下载</string>
</resources>
