<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.yasha.exhentai.MainActivity">
    <item
        android:onClick="onRefreshClick"
        android:title="@string/refresh" />
    <item
        android:onClick="onFavClick"
        android:title="@string/fav" />
    <item
        android:onClick="onLoadClipboardClick"
        android:title="@string/load_clipboard" />
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
    <item
        android:onClick="onResetClick"
        android:title="@string/reset_download_manager" />
    <item android:title="@string/skip_downloading"
        android:onClick="onSkipDownloading"/>
</menu>
